--- a/ColorCatalog/package.json
+++ b/ColorCatalog/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
+    "react-native-progress": "^5.0.0",
     "react-native-web": "^0.18.12"
   },
   "devDependencies": {
