--- a/ColorCatalog/package.json
+++ b/ColorCatalog/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
     "react-native-progress": "^5.0.0",
-    "react-native-web": "^0.18.12"
+    "react-native-web": "^0.18.12",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
