--- a/ColorCatalog/app.json
+++ b/ColorCatalog/app.json
@@ -1,13 +1,14 @@
 {
   "expo": {
     "name": "ColorCatalog",
+    "description": "Catalog your colors. Save your favorite!",
     "slug": "ColorCatalog",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/cc-icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/cc-splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
