--- a/ColorCatalog/package.json
+++ b/ColorCatalog/package.json
@@ -1,11 +1,10 @@
 {
   "name": "colorcatalog",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -25,7 +24,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-web": "^0.18.12",
     "shortid": "^2.2.16",
-    "expo-updates": "~0.16.4"
+    "expo-updates": "~0.16.4",
+    "expo-splash-screen": "~0.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
